--- a/Semester_2/Labo_3/Kleurenwisselaar/styles/style.css
+++ b/Semester_2/Labo_3/Kleurenwisselaar/styles/style.css
@@ -1,10 +1,12 @@
-.button{
-    border: 1px solid black;
-    border-radius: 5px;
-    background-color: gray;
-    width: 100px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.button {
+    background-color: white;
+    border: 2px solid black;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 5px;
+}
+.active {
+    background-color: lightblue;
+    color: white;
 }
